--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second github repo</title>
 </head>
 <body>
-    
+    <h1>ami akn coddig a</h1>
+    <h2>github onk kotin </h2>
+    <h3>ami akn index a</h3>
 </body>
 </html>
