--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>ami akn coddig a</h1>
     <h2>github onk kotin </h2>
-    <h3>ami akn index a </h3>
+    <h3>ami akn index a ,partesi na</h3>
 </body>
 </html>
