--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ami akn coddig a</h1>
+    <h1>ami akn coddig a .com</h1>
     <h2>github onk kotin </h2>
     <h3>ami akn index a ,partesi na</h3>
+    <p>more paragraph</p>
+    <img src="friends.jpg" alt="">
 </body>
 </html>
