--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ami akn coddig a .com</h1>
+    <h1>ami akn coddig a .com com</h1>
     <h2>github onk kotin </h2>
     <h3>ami akn index a ,partesi na</h3>
     <p>more paragraph</p>
+    <img src="images/fan.jpg" alt="">
     <img src="friends.jpg" alt="">
 </body>
 </html>
